<resources>
    <string name="app_name">Snare</string>
    <string name="server_client_id">WEB CLIENT ID</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="map_key" translatable="false">AIzaSyB3hINEIppXObkkhhXtrQYdVJAjLro7v3E</string>
    <string name="my_notes">my notes</string>
    <string name="search_notes">Search</string>
    <string name="note_title">Title</string>
    <string name="note_content">Content</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">pick color</string>
    <string name="add_image">add_image</string>
    <string name="delete_note">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this?</string>
    <string name="delete_note_confirm">Delete Note</string>
    <string name="cancel">Cancel</string>
    <string name="recording">Recording</string>
    <string name="choose_a_date_time"><![CDATA[Choose a date & time]]></string>
    <string name="choose_a_place">Choose a place</string>
    <string name="collabrator">Collaborate</string>
    <string name="collaborator">Collaborate</string>
    <string name="select_a_time">Select a time ...</string>
    <string name="save">Save</string>
    <string name="select_a_date">Select a date ... </string>
    <string name="count"> ~ 0</string>
    <string name="make_reminder">make reminder</string>
    <string name="emailMsg"> We noticed unusual activity on your account,if this was you, please ignore this email, if not a Password reset email has been sent to you</string>
</resources>