<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:id="@+id/layoutReminderContainer"
    android:background="@drawable/background_dialog">


    <ImageView
        android:id="@+id/imageReminder"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_clock"
        android:tint="@color/colorWhite"
        tools:ignore="UseAppTint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:text="Add reminder"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/imageReminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageReminder"
        app:layout_constraintTop_toTopOf="@id/imageReminder"/>


    <TextView
        android:id="@+id/addTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:text="@string/select_a_time"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp"
       app:layout_constraintTop_toBottomOf="@+id/imageReminder"/>

    <TextView
        android:id="@+id/addDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:text="@string/select_a_date"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@+id/addTime"/>


    <TextView
        android:id="@+id/textSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/save"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@+id/addTime"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@+id/addTime"
        app:layout_constraintEnd_toStartOf="@id/textSave"/>




</androidx.constraintlayout.widget.ConstraintLayout>