<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activities.CreateReminderActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40.00dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imageBackReminder"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                android:tint="@color/colorIcons"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                tools:ignore="UseAppTint" />


            <ImageView
                android:id="@+id/imageSaveReminder"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/background_done_button"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_done"
                android:tint="@color/colorIcons"
                app:layout_constraintBottom_toBottomOf="@id/imageBackReminder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBackReminder"
                tools:ignore="UseAppTint" />

            <EditText
                android:id="@+id/inputReminderTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toBottomOf="@+id/imageBackReminder" />

            <View
                android:id="@+id/viewTitleIndicatorReminder"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:background="@drawable/background_title_indicator"
                app:layout_constraintBottom_toBottomOf="@id/inputReminderTitle"
                app:layout_constraintEnd_toStartOf="@id/inputReminderTitle"
                app:layout_constraintTop_toTopOf="@id/inputReminderTitle" />

            <TextView
                android:id="@+id/textDateTimeReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textColor="@color/colorIcons"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@id/inputReminderTitle"
                app:layout_constraintStart_toStartOf="@id/inputReminderTitle"
                app:layout_constraintTop_toBottomOf="@id/inputReminderTitle" />

            <ImageView
                android:id="@+id/imageReminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/inputReminderTitle" />


            <ImageView
                android:id="@+id/imageRemoveImageReminder"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/background_delete"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_delete"
                android:tint="@color/colorWhite"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="@id/imageReminder"
                app:layout_constraintEnd_toEndOf="@id/imageReminder"
                tools:ignore="UseAppTint" />


            <EditText
                android:id="@+id/inputReminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/note_content"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageReminder" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/layout_miscellaneous" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>



